feat: use k8s to deploy srv
